--- a/eCommerce.WebUI/Views/Admin/ProductList.cshtml
+++ b/eCommerce.WebUI/Views/Admin/ProductList.cshtml
@@ -41,7 +41,7 @@
             @Html.DisplayFor(modelItem => item.CostPrice)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ProductId }) |
+            @Html.ActionLink("Edit", "EditProduct", new { id=item.ProductId }) |
             @Html.ActionLink("Details", "Details", new { id=item.ProductId }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.ProductId })
         </td>
