--- a/eCommerce.WebUI/Views/Home/Index.cshtml
+++ b/eCommerce.WebUI/Views/Home/Index.cshtml
@@ -10,40 +10,16 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CostPrice)
-        </th>
-        <th></th>
-    </tr>
+    
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Description)
+            <img src="/images/@item.ImageUrl" alt="@item.Description" />
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ImageUrl)
-        </td>
+            @Html.ActionLink(item.Description, "Details", new { id = item.ProductId})
         <td>
             @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CostPrice)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ProductId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ProductId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ProductId })
         </td>
     </tr>
 }
