--- a/eCommerce.WebUI/Views/Home/Index.cshtml
+++ b/eCommerce.WebUI/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            <img src="/images/@item.ImageUrl" alt="@item.Description" />
+            <img style="width:15%" src="/images/@item.ImageUrl" alt="@item.Description" />
         </td>
             @Html.ActionLink(item.Description, "Details", new { id = item.ProductId})
         <td>
